# MPU6050-pico

src/: CMakeLists.txt  mpu6050.cpp  mpu6050.h
